# HF_to_TurtleBot

./: README.md
curriculum_navigation/: CMakeLists.txt  package.xml
curriculum_navigation/src/: goforward.py
curriculum_navigation/src/TurtleBot_crafting/: SimpleDQN.py  test_curr.py
curriculum_navigation/src/TurtleBot_crafting/TurtleBot_v0/: EnvironmentHandlers.py  __init__.py
curriculum_navigation/src/TurtleBot_crafting/TurtleBot_v0/envs/: __init__.py  turtlebot_v0_env.py  turtlebot_v2_env.py
curriculum_navigation/src/TurtleBot_crafting/TurtleBot_v0/envs/utils/: EnvironmentHandlers.py  Rewards.py  SimpleDQN.py
turtlebot_navigation/: CMakeLists.txt  package.xml
turtlebot_navigation/src/: turtlebot_movement.py
turtlebot_navigation/src/TurtleBot_crafting/TurtleBot_v0/envs/: turtlebot_v1_env.py
